# vannak

./: .gitignore  AGENTS.md  ARCHITECTURE.md  Cargo.toml  Dockerfile  README.md  docker-compose.cluster.yml  docker-compose.full.yml  docker-compose.kafka.yml  docker-compose.test.yml
.github/workflows/: ci.yml
dns/: Corefile  vannak.local.db
docs/operations-manual/: techdoc.cls  vannak-operations-manual.tex
docs/operations-manual/chapters/: 01-introduction.tex  02-system-overview.tex  03-setup-and-installation.tex  04-topology-and-placement.tex  05-configuration.tex  06-ingest-and-indexing.tex  07-durability-and-outbox.tex  08-ipto-integration.tex  09-cluster-operations.tex  10-rebalancing.tex  11-observability.tex  12-recovery.tex  13-appendix.tex
scripts/: demo.sh  run-cluster-test.sh  run-integration-test.sh
src/: cluster.rs  daemon.rs  data.rs  durga.rs  index.rs  ingest.rs  ipto.rs  ipto_adapter.rs  kafka_client.rs  kafka_ingest.rs  lib.rs  metadata.rs  observability.rs  process.rs  query.rs  raft_sm.rs  runtime.rs  service.rs  sitas_runtime.rs  storage.rs
tests/: kafka_integration.rs  vannak_integration.rs
thoughts/: bug-ipto-normalize-attribute-type.md  consistent-hash-placement.md  prov-and-dcat-on-ipto.md  shard-placement-and-reconfiguration.md
