# Copyright (C) 2026 Frode Randers
# All rights reserved
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "vannak"
version = "0.1.0"
edition = "2024"
description = "Operational knowledge plane for pipeline events and metadata impact analysis."
license = "Apache-2.0"

[lib]
name = "vannak"
path = "src/lib.rs"

[dependencies]
ipto_rust = { path = "../ipto/implementations/rust", optional = true, default-features = false }
serde_json = { version = "1", optional = true }
uuid = { version = "1", features = ["v7"], optional = true }

[features]
default = []
ipto-writer = ["dep:ipto_rust", "dep:serde_json", "dep:uuid"]
