# Copyright (C) 2026 Frode Randers
# All rights reserved
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "vannak"
version = "0.1.0"
edition = "2024"
description = "Operational knowledge plane for pipeline events and metadata impact analysis."
license = "Apache-2.0"

[lib]
name = "vannak"
path = "src/lib.rs"

[dependencies]
ipto_rust = { path = "../ipto/implementations/rust", optional = true, default-features = false }
serde_json = { version = "1", optional = true }
uuid = { version = "1", features = ["v7"], optional = true }
graft-core = { path = "../raft/graft-rust/graft-core", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
graft-runtime = { path = "../raft/graft-rust/graft-runtime", optional = true }
graft-storage = { path = "../raft/graft-rust/graft-storage", optional = true }
graft-transport = { path = "../raft/graft-rust/graft-transport", optional = true }
tokio = { version = "1", features = ["full"], optional = true }
parking_lot = { version = "0.12", optional = true }
graft-proto = { path = "../raft/graft-rust/graft-proto", optional = true }
prost = { version = "0.14", optional = true }
bytes = { version = "1", optional = true }

[features]
default = []
ipto-writer = ["dep:ipto_rust", "dep:serde_json", "dep:uuid"]
raft = ["dep:graft-core", "dep:serde", "dep:serde_json"]
node = ["raft", "dep:graft-runtime", "dep:graft-storage", "dep:graft-transport", "dep:tokio", "dep:parking_lot", "dep:graft-proto", "dep:prost", "dep:bytes"]

[[test]]
name = "vannak_integration"
required-features = ["ipto-writer"]

[[bin]]
name = "vannak-node"
required-features = ["node"]

[[bin]]
name = "vannak-load"
required-features = []
